--- a/web.config
+++ b/web.config
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
 <system.webServer>
   <rewrite>
     <rules>
-      <rule name="Angular Routes" stopProcessing="true">
+      <rule name="AngularJS" stopProcessing="true">
         <match url=".*" />
         <conditions logicalGrouping="MatchAll">
           <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
